--- a/02vue/09.html
+++ b/02vue/09.html
@@ -36,7 +36,7 @@
             <h1>图书管理</h1>
             <div class="book">
                 <label for="id">编号</label>
-                <input type="text" id="id" v-model='id'>
+                <input type="text" id="id" v-model='id' :disabled='flag'>
                 <label for="name">名称</label>
                 <input type="text" id="name" v-model='name'>
                 <button @click='handle'>提交</button>
@@ -58,9 +58,9 @@
                 <td>{{item.name}}</td>
                 <td>{{item.date}}</td>
                 <td>
-                    <a href="" @click.prevent>修改</a>
+                    <a href="" @click.prevent='toEdit(item.id)'>修改</a>
                     <span>|</span>
-                    <a href="" @click.prevent>删除</a>
+                    <a href="" @click.prevent='deleteBook(item.id)'>删除</a>
                 </td>
             
             </tr>
@@ -82,6 +82,7 @@
             msg: "hello vue",
             id: '',
             name: '',
+            flag: false,
             books: [{
                 id: 1,
                 name: '三国演义',
@@ -103,16 +104,61 @@
         },
         methods: {
             handle: function() {
-                //添加图书
-                var book = {};
-                book.id = this.id;
-                book.name = this.name;
-                book.date= '';
-                this.books.push(book);
+
+                if(this.flag) {
+                    //编辑 ，
+                    //根据当前的id去更新数组中对应的数据
+                    this.books.some((item) => {
+                        if(item.id == this.id) {
+                            item.name = this.name;
+                            //完成更新之后，需要终止遍历
+                            return true;
+                        }
+                    });
+                    this.flag = false;
+                } else {
+                    //添加
+                    
+                    //添加图书
+                    var book = {};
+                    book.id = this.id;
+                    book.name = this.name;
+                    book.date= '';
+                    this.books.push(book);
+
+                }
 
                 //清空表单
                 this.id = '';
                 this.name = '';
+
+            },
+            toEdit: function(id) {
+                //点击修改时，禁止修改id
+                this.flag = true
+
+                //根据id查询出要编辑的数据
+                var book = this.books.filter(function(item) {
+                    return item.id == id;
+                })
+                console.log(book);
+                //把获取到的信息填充到表单
+                this.id = book[0].id;
+                this.name = book[0].name;
+            },
+            //删除图书
+            deleteBook: function(id) {
+                //根据id在数组中查找索引
+                // var index = this.books.findIndex((item) => {
+                //         return item.id == id;
+                //     })
+                // this.books.splice(index,1);
+
+                //-----
+                //方法二：通过filter去删除
+                this.books = this.books.filter((item) => {
+                    return item.id != id;
+                })
             }
         }
     })
