--- a/06/initwebpack/src/index.html
+++ b/06/initwebpack/src/index.html
@@ -9,6 +9,7 @@
     <script src="/bundle.js"></script>
 </head>
 <body>
+    <input type="text" placeholder="ceshi">
     <ul>
         <li>这是第1个li</li>
         <li>这是第2个li</li>
@@ -20,5 +21,15 @@
         <li>这是第8个li</li>
         <li>这是第9个li</li>
     </ul>
+
+    <div id="box"></div>
+
+    <hr>
+    111
+    <!-- vue  控制的区域 -->
+    <div id="app11">
+
+        app11111111
+    </div>
 </body>
 </html>
